<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_menu">
        <include layout="@layout/nav_header_main" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingBottom="14dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/nav_company">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_company" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/company"
                    android:text="Square, Inc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingBottom="14dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/nav_location">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_menu_location" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/location"
                    android:text="USA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingBottom="14dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/nav_blog">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_menu_blog" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/blog"
                    android:text="http://jake.com"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingBottom="14dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/nav_followers">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_menu_group" />

            <TextView
                android:text="@string/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:id="@+id/followers_count"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="345"
                android:textSize="18dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/drawer_number_bg"
                />

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingBottom="14dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/nav_following">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_following" />

            <TextView
                android:text="@string/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:id="@+id/following_count"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="345"
                android:textSize="18dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/drawer_number_bg"
                />

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingBottom="14dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/nav_repositories">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_storage" />

            <TextView
                android:text="@string/repositories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:id="@+id/repositories_count"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="345"
                android:textSize="18dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/drawer_number_bg"
                />

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

        </LinearLayout>





    </LinearLayout>
</ScrollView>
